add rotate image

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,7 @@
         </RelativeLayout>
 
         <ImageView
+            android:id="@+id/imageSong"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/splashchat"
